# mkdocs-exclude-unused-files

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  linter.yml  publish.yaml
mkdocs_exclude_unused_files/: plugin.py
tests/fixtures/: mkdocs.append.yml  mkdocs.not-enabled.yml  mkdocs.yml
tests/fixtures/docs/: README.md
tests/fixtures/docs/assets/: test.yml
