[tool.poetry]
name = "mkdocs-exclude-unused-files"
version = "0.0.0"
description = "A mkdocs plugin that excludes assets that are unused (orphaned) from being included in the final mkdocs output."
authors = ["Jonas Lorenz <jonas@jonasdoesthings.com>"]
readme = "README.md"
homepage = "https://github.com/JonasDoesThings/mkdocs-exclude-unused-files"
repository = "https://github.com/JonasDoesThings/mkdocs-exclude-unused-files"
documentation = "https://github.com/JonasDoesThings/mkdocs-exclude-unused-files/blob/main/README.md"
license = "MIT"
keywords = ["mkdocs", "mkdocs-plugin", "unused-files", "orphaned-files"]
packages = [{ include = "mkdocs_exclude_unused_files" }]

[tool.poetry.urls]
Issues = "https://github.com/JonasDoesThings/mkdocs-exclude-unused-files/issues"
History = "https://github.com/JonasDoesThings/mkdocs-exclude-unused-files/releases"

[tool.poetry.plugins."mkdocs.plugins"]
mkdocs_exclude_unused_files = "mkdocs_exclude_unused_files.plugin:ExcludeUnusedFilesPlugin"
mkdocs-exclude-unused-files = "mkdocs_exclude_unused_files.plugin:ExcludeUnusedFilesPlugin"
exclude_unused_files = "mkdocs_exclude_unused_files.plugin:ExcludeUnusedFilesPlugin"
exclude-unused-files = "mkdocs_exclude_unused_files.plugin:ExcludeUnusedFilesPlugin"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
mkdocs = "^1.4.3"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
pyupgrade = "^3.4.0"
mypy = "^1.3.0"
black = "^23.3.0"
pre-commit = "^3.3.1"
isort = "^5.12.0"
flake8 = "^6.0.0"
bandit = "^1.7.5"
types-beautifulsoup4 = "^4.12.0.5"
mkdocs-material = "^9.1.12"

[tool.poetry.plugins."poetry-plugin-up"]
# https://github.com/MousaZeidBaker/poetry-plugin-up#usage

[tool.poetry-dynamic-versioning]
# https://github.com/mtkennerly/poetry-dynamic-versioning#configuration
enable = true
style = "semver"
vcs = "git"
bump = true

[tool.black]
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-format
target-version = ["py310"]
line-length = 120

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/options.html
py_version = 310
profile = "black"

[tool.bandit]
# https://bandit.readthedocs.io/en/latest/config.html#bandit-settings
exclude_dirs = [".venv"]

[tool.ruff]
# https://beta.ruff.rs/docs/settings/
target-version = "py310"
exclude = [".venv"]
line-length = 120

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
python_version = "3.10"
files = "**/*.py"
exclude = ['/setup\.py$']

[tool.pyright]
venvPath = ".venv"

[build-system]
requires = ["poetry-core>=1.3.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
